# staubli_tx2_60L_gz_sim

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py  sim.launch.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
meshes/tx2_60/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl
meshes/tx2_60/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl
meshes/tx2_60l/collision/: link_2.stl  link_4.stl
meshes/tx2_60l/visual/: link_2.stl  link_4.stl
urdf/: tx2_60l.urdf
